frontend/test/should_pass/attrib_002.grg
using attrib_model_001;

rule r {
	nby : NBYTE;
	nsh : NSHORT;
	ni : NINT;
	nl : NLONG;
	nb : NBOOL;
	nf : NFLOAT;
	nd : NDOUBLE;
	ns : NSTRING;
	no : NOBJECT;
	-eby:EBYTE->;
	-esh:ESHORT->;
	-ei:EINT->;
	-el:ELONG->;
	-eb:EBOOL->;
	-ef:EFLOAT->;
	-ed:EDOUBLE->;
	-es:ESTRING->;
	-eo:EOBJECT->;
	if {
		nby.a == eby.a;
		nsh.a == esh.a;
		ni.a == ei.a;
		nl.a == el.a;
		nb.a == eb.a;
		nf.a == ef.a;
		nd.a == ed.a;
		ns.a == es.a;
		no.a == eo.a;
	}

	modify {
	}
}

