frontend/test/should_fail/attrib_short_003.grg
using attrib_model_001;

rule r {
	nsh : NSHORT;
	ni : NINT;
	nl : NLONG;
	nb : NBOOL;
	nf : NFLOAT;
	nd : NDOUBLE;
	ns : NSTRING;

	modify {
		eval {
			nsh.a = nf.a;
		}
	}
}

